# api-training

./: pyproject.toml
frontend/: app.config.ts  app.vue
frontend/middleware/: auth.ts
frontend/pages/: index.vue  login.vue
src/ulbadmin/: db.sqlite3  manage.py
src/ulbadmin/ulbadmin/: admin.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src/ulbadmin/ulbadmin/migrations/: 0001_initial.py
