[tool.poetry]
name = "api-training"
version = "0.1.0"
description = "Ce projet est un petit labo afin de comprendre le fonctionnement des API à travers Django Ninja"
authors = ["lospollos"]
readme = "README.md"
packages = [{ include = "ulbadmin", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^1.4.3"
poetry-core = "^2.2.1"
django = "^5.2.7"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
django-ninja-jwt = "^5.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
